[package]
name = "ldoc_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
walkdir = "2.3.3"
anyhow = { version = "1.0.75", features = ["backtrace"] }
tree-sitter = "0.20.10"
tree-sitter-lua = "0.0.19"
# regex = "1.9.3"
# onig = "6.4.0"
pcre2 = "0.2.4"
